@@ -550,7 +550,7 @@
 #' \code{\link[stats]{formula}}, \code{\link{Formula.translate}}, \code{\link{Formula.translate.compat}}, \code{\link{write.IGLS}}, \code{\link{write.MCMC}}
 #'
 #' @import doParallel foreach parallel
-#' @importFrom stats acf as.formula cov density end getCall get_all_vars model.frame model.matrix model.offset na.omit pacf pnorm qnorm quantile sd start terms terms.formula update.formula var window
+#' @importFrom stats acf as.formula cov density end getCall get_all_vars model.frame model.matrix model.offset na.omit pacf pnorm qnorm quantile sd start terms terms.formula update.formula var window complete.cases reshape
 #' @importFrom grDevices dev.new
 #' @importFrom graphics close.screen lines par plot points screen split.screen text
 #' @importFrom utils read.delim stack
@@ -2820,7 +2820,7 @@ version:date:md5:filename:x64:trial:platform
         stopCluster(clust)
       }
       # unregister doParallel as detailed on http://stackoverflow.com/questions/25097729/un-register-a-doparallel-cluster
-      env <- foreach:::.foreachGlobals
+      env <- get(".foreachGlobals", asNamespace("foreach"), inherits = FALSE)
       rm(list=ls(name=env), pos=env)
     }
 
