@@ -1,3 +1,7 @@
+Mon Apr 11 2016
+1. Changes
+   * Use "get" function for clearing "foreach" package globals and updating the formula to satisfy CRAN checks
+
 Wed Feb 03 2016
 1. Changes
    * If a denominator is not specified generate a column of ones and use that instead
